# LK8000

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CREDITS.TXT  CREDITS.txt  Install.sh  Makefile  README  README.md  build-linux.sh  buildnumber  buildnumber.h  lktest.sh  makeall  oldMakefile  savelk.sh
.circleci/: config.yml
.cursor/rules/: build.mdc
.github/: FUNDING.yml
.github/workflows/: build-all.yml  codeql.yml
Common/: .cproject  .project
Common/Data/Bitmaps/: LKicon.ico.16  egm96s.hdr  smalltown.bmp.grey
Common/Data/Dialogs/: Dialog.xsd  ENG_HELP.TXT  ENG_MSG.TXT  README  dlgAirspace.xml  dlgAirspaceColours.xml  dlgAirspaceColours_L.xml  dlgAirspaceColours_P.xml  dlgAirspaceDetails.xml  dlgAirspacePatterns.xml  dlgAirspacePatterns_L.xml  dlgAirspacePatterns_P.xml  dlgAirspaceSelect.xml  dlgAirspaceSelect_L.xml  dlgAirspaceSelect_P.xml  dlgAirspaceWarning.xml  dlgAirspaceWarningParams.xml  dlgAirspaceWarning_L.xml  dlgAirspace_L.xml  dlgAirspace_P.xml  dlgAnalysis.xml  dlgAnalysis_L.xml  dlgAnalysis_P.xml  dlgApproachApprove_L.xml  dlgApproachApprove_P.xml  dlgApproach_L.xml  dlgApproach_P.xml  dlgBasicSettings.xml  dlgBasicSettings_L.xml  dlgBasicSettings_P.xml  dlgBlueFlyConfig.xml  dlgBlueFlyConfig_L.xml  dlgBlueFlyConfig_P.xml  dlgBluetooth.xml  dlgBluetooth_L.xml  dlgBluetooth_P.xml  dlgBottomBar.xml  dlgChecklist.xml  dlgChecklist_L.xml  dlgChecklist_P.xml  (+132 more)
Common/Data/Fonts/: README
Common/Data/Input/: Makefile  h2cpp.pl  lk8000.2A.xci  lk8000.2B.xci  lk8000.3A.xci  lk8000.4A.xci  lk8000.4B.xci  lk8000.4C.xci  lk8000.4C.xci.old  lk8000.4D.xci  lk8000.4E.xci  lk8000.4F.xci  lk8000.4G.xci  lk8000.4H.xci  lk8000.4I.xci  lk8000.4J.xci  lk8000.4K.xci  lk8000.4L.xci  lk8000.4N.xci  lk8000.5A.xci  lk8000.xci  xci2cpp.pl
Common/Data/Language/: DEFAULT_MENU.TXT  ENGLISH.LNG  ENG_HELP.TXT  ENG_MENU.ASCII.TXT  ENG_MENU.TXT  ENG_MSG.TXT  MENU.TXT  README  ToDo.TXT  language.json
Common/Data/Polars/: 1-34.plr  1-35A.plr  604.plr  ASG29-15.plr  ASG29-18.plr  ASH-25M 1.plr  ASH-26E.plr  ASK-21.plr  ASK-23.plr  ASW-15.plr  ASW-19.plr  ASW-22BLE.plr  DG-200.plr  (+62 more)
Common/Header/: AATDistance.h  AirfieldDetails.h  Airspace.h  AirspaceWarning.h  Asset.hpp  Atmosphere.h  Baro.h  Bitmaps.h  BtHandler.h  CTaskFileHelper.h  CalcTask.h  Calculations.h  Calculations2.h  ClimbAverageCalculator.h  ComCheck.h  ComPort.h  ContestMgr.h  Cpustats.h  CriticalSection.h  Debug.h  Defines.h  Dialogs.h  DoInits.h  DoInits.h.bak  DrawFAIOpti.h  Enums.h  FAI_Sector.h  Fanet.h  Flarm.h  FlarmCalculations.h  FlarmIdFile.h  FlarmRadar.h  FlightDataRec.h  GADirectTo.h  GaugeCDI.h  GaugeFLARM.h  GaugeVario.h  GaugeVarioAltA.h  Geoid.h  Globals.h  (+163 more)
Common/Source/: .lgtm.yml  AATDistance.cpp  AirTools.cpp  AirfieldDetails.cpp  Airspace.cpp  AirspaceColourDlg.cpp  AirspaceWarning.cpp  Alarms.cpp  AssetId.cpp  Atmosphere.cpp  Backlight.cpp  Battery.cpp  BatteryManager.cpp  BatteryManager.h  Bitmaps.cpp  Buttons.cpp  Calculations.cpp  Calculations2.cpp  ChangeScreen.cpp  ChangeScreen.h  ClimbAverageCalculator.cpp  CommandLine.cpp  ConditionMonitor.cpp  ContestMgr.cpp  CpuLoad.cpp  DLL.cpp  DataOptions.cpp  Dialogs.cpp  DoInits.cpp  Doc  ExpandMacros.cpp  FillDataOptions.cpp  FlarmCalculations.cpp  FlarmIdFile.cpp  FlarmTools.cpp  Fonts.cpp  Fonts1.cpp  Fonts2.cpp  Geoid.cpp  Globals.cpp  (+210 more)
Common/Test/: CMakeLists.txt  CupToLatLon_test.cpp  GpsWeekNumberFix_test.cpp  StrToDouble_test.cpp  temp_global.cpp
Common/Utils/: CEDraw.cpp  optimizer.cpp
Common/Utils/cupx/: CMakeLists.txt  main.cpp
Common/Utils/language-check/: CMakeLists.txt  language-check.cpp
Common/Utils/test_tools/: CMakeLists.txt  flarm-sim.cpp  krt2-ping.cpp  lxnano-sim.cpp
Common/Utils/wind-estimate/: CMakeLists.txt  mock.cpp  parse_igc.cpp  parse_igc.h  wind-estimate.cpp
Docs/: Approach.md  Approach_Manual_Addendum.md  CHANGES41.TXT  CHANGES_51.TXT  CHANGES_61.TXT  CHANGES_IN_40.TXT  CHANGES_IN_LK20.TXT  CHANGES_IN_LK21.TXT  CHANGES_IN_LK31.TXT  CHANGES_IN_LK_23.TXT  Contributing-PR-Approach-Target-KOBO-overlay.md  DirectTo_EN.odt  DirectTo_EN_v4.odt  DirectTo_IT.odt  DirectTo_IT_v3.docx  DirectTo_IT_v4.odt  FlightRecorderDoc.txt  LK8000_v60_Manual.odt  LK8000_v70_Manual.odt  LK8000_v71_Manual.odt  LK8EX1.txt  README  memo
Docs/Airspaces/: Airspace_settings_update.md
Docs/Tracking/: LiveTracking_Update.md
Scripts/: Install.sh  android-toolchain-install.sh  android.toolchain.cmake  arm-tool-install.sh  docker-run.sh  dockerfile  egps  i686-w64-mingw32.cmake  install-kobo-depends.sh  install-mingw-w64-depends.sh  kobo-ct-ng.config  kobo-toolchain-install.sh  kobo-upload.sh  lkmenu  resample_wav.sh  toolchain-mingw-w64.sh  x86_64-w64-mingw32.cmake
Scripts/kobo-build-rootfs/: arm-kobo-linux-gnueabihf.cmake  build-all.sh  build-common.sh  build-config.sh
ScriptsNew/: install-kobo-depends.sh  local.mk
android/: AndroidManifest.xml  custom_rules.xml
android-studio/: .gitignore  build.gradle  gradle.properties  prepare.sh
android-studio/app/: .gitignore  build.gradle  proguard-rules.pro
android-studio/gradle/: gradle-daemon-jvm.properties
android/src/: APILevel5.java  AndroidPort.java  BMP085.java  BatteryReceiver.java  BitmapUtil.java  BluetoothClientPort.java  BluetoothGattClientPort.java  BluetoothHelper.java  BluetoothPort.java  BluetoothServerPort.java  DemoData.java  EventBridge.java  GlueBMP085.java  GlueI2Cbaro.java  GlueVoltage.java  I2Cbaro.java  IOIOAgent.java  IOIOMultiAgent.java  IOIOPort.java  InputListener.java  InputThread.java  InternalGPS.java  LK8000.java  LKDistribution.java  LKMaps.java  Loader.java  MultiPort.java  MyService.java  NativeBMP085Listener.java  NativeI2CbaroListener.java  NativeInputListener.java  NativeLeScanCallback.java  NativeNunchuckListener.java  NativeView.java  NativeVoltageListener.java  NetUtil.java  OutputThread.java  SoundUtil.java  TextUtil.java  Voltage.java
kobo/: 60-persistent-serial.rules  KoboMenu  inittab  rcS
kobo/kernel/: install.readme  kernel.readme  uImage-E60610D  uImage-E60Q90  uImage-E60QL0  uImage-mx50-ntx
(+2025 files in other folders)
